fix: remove links to non-existing articles

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -23,9 +23,7 @@ This is a powerful feature to streamline creation of your pages, and save a lot 
 
 With this release, we are introducing a brand new page rendering engine called **Page Elements**!
 
-With it, we've made a complete overhaul of the way pages created with Webiny's Page Builder application are being rendered.
-
-The results are:
+With it, we've made a complete overhaul of the way pages created with Webiny's Page Builder application are being rendered. The results are:
 
 - a drastic reduction of more than **80%** 🚀 of the total amount of HTML and CSS that is shipped to your website's visitors
 - significant improvements in both objective and perceived performance of your website
@@ -37,20 +35,20 @@ When it comes to development, the new rendering engine also brought the followin
 - minimized the chance of having visual differences when comparing a page rendered in the Page Builder's page editor and on the actual public website
 - drastically simplified the application code located in **Website** (`apps/website`) and **Theme** (`apps/theme`) folders
 
-<Alert type="info" title={"Backwards Compatibility"}>
-
-For new Webiny projects, the new rendering engine will be enabled by default. No extra steps needed.
+For new Webiny projects, the new rendering engine will be enabled by default. No extra steps needed!
 
 For existing projects, users have the option to migrate to the new rendering engine over time, once it's convenient
-for them. Until then, their projects will still use the now _legacy_ rendering engine, which we plan to support until the end of June 2022. After that, the legacy rendering engine will be considered deprecated and will receive no further support.
+for them. Until then, their projects will still use the now _legacy_ rendering engine, which we plan to support until the end of June 2022. After that, the legacy rendering engine will be considered deprecated and will receive no further support from the Webiny team.
 
-</Alert>
+When it comes to the migration guide, this is something we plan to publish over the next following days. Stay tuned for more information on this topic. 
+
+At the end of the day, we're very excited about this next level in the Page Builder application's evolution and how the new rendering engine will enable Webiny users to provide the best possible experience to their website's visitors. 
 
 ### Rendering Pages In External (non-Webiny) Projects
 
-One of the long-awaited features we've also introduced in this release is the ability to render pages created with Webiny's Page Builder application in external (non-Webiny) projects. For example, you can now render pages in a standalone [Next.js](https://nextjs.org/) application, with just a couple of initial setup steps.
+One of the long-awaited features we've also introduced in this release is the ability to render pages created with Webiny's Page Builder application in external (non-Webiny) projects. For example, you can now render pages in a standalone [Next.js](https://nextjs.org/) application, with just a couple of initial setup steps!
 
-Be sure to check out the related documentation to learn more.
+More documentation on this topic will be coming in the following days, so definitely stay tuned if you want to learn more.
 
 ## Mailer
 
@@ -119,7 +117,7 @@ Learn more about project applications and project organization in general, in th
 
 </Alert>
 
-For more information about this new feature, please visit the [Application Aliases](#) section of the existing [Webiny CLI](/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli) article.
+[//]: # (For more information about this new feature, please visit the [Application Aliases]&#40;#&#41; section of the existing [Webiny CLI]&#40;/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli&#41; article.)
 
 ### Feature Flags ([#2897](https://github.com/webiny/webiny-js/pull/2897))
 
@@ -161,7 +159,7 @@ if (featureFlags.myComplexFeatureFlag.a === 1) {
 return false;
 ```
 
-To learn more about feature flags, please visit the related [Feature Flags](#) article.
+[//]: # (To learn more about feature flags, please visit the related [Feature Flags]&#40;#&#41; article.)
 
 ### Environment Variables via `webiny.project.ts` ([#2896](https://github.com/webiny/webiny-js/pull/2896))
 
@@ -190,9 +188,9 @@ export default {
 
 Note that the `WEBINY_` prefixed variables will be available in your backend (AWS Lambda) application code, and the `REACT_APP_` prefixed ones in your frontend (React) application code.
 
-For more information about this new feature, please visit the updated [Environment Variables](/docs/{exact:5.34.x}/core-development-concepts/basics/environment-variables) article.
+[//]: # (For more information about this new feature, please visit the updated [Environment Variables]&#40;/docs/{exact:5.34.x}/core-development-concepts/basics/environment-variables&#41; article.)
 
-### Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
+### Updated Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
 
 Because there were some inconsistencies in the naming of the lifecycle events throughout the system, we changed those to be the same everywhere. All lifecycle events, created through our publish/subscribe mechanism, now follow the same naming convention:
 
