fix: update PE image

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -10,7 +10,7 @@ import validatorMessage from "./assets/validator-message.png";
 import formattedMessage from "./assets/formatted-message.png";
 import blockManager from "./assets/block-manager.png";
 import deployDiff from "./assets/pulumi-diff.png";
-import pe from "./assets/pes3.png";
+import pe from "./assets/pe.png";
 
 ## Page Builder
 
@@ -20,9 +20,9 @@ This is a powerful feature to streamline creation of your pages, and save a lot 
 
 <Image src={blockManager} title={"Blocks Manager"} />
 
-### Page Elements: The Brand New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
+### Page Elements: A Brand New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
 
-<Image src={pe} title={"Page Elements: The Brand New Page Rendering Engine"} shadow={false}/>
+<Image src={pe} title={"Page Elements: A Brand New Page Rendering Engine"} shadow={false}/>
 
 With this release, we are introducing a brand new page rendering engine called **Page Elements**!
 
