fix: update PE image

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -38,7 +38,7 @@ When it comes to development, the new rendering engine also brought the followin
 - minimized the chance of having visual differences when comparing a page rendered in the Page Builder's page editor and on the actual public website
 - drastically simplified the application code located in **Website** (`apps/website`) and **Theme** (`apps/theme`) folders
 
-For new Webiny projects, the new rendering engine will be enabled by default. No extra steps needed!
+For new Webiny projects, the new rendering engine is enabled by default. No extra steps needed!
 
 For existing projects, users have the option to migrate to the new rendering engine over time, once it's convenient
 for them. Until then, their projects will still use the now _legacy_ rendering engine, which we plan to support until the end of June 2022. After that, the legacy rendering engine will be considered deprecated and will receive no further support from the Webiny team.
