docs: added solution to fix,  error

--- a/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
@@ -222,3 +222,19 @@ Learn more about cloud infrastructure state files in the [Cloud Infrastructure S
 #### Another Deployment Currently in Progress
 
 In case of the latter, in which an active deployment currently exists, then you'll just need to wait for the first one to finish, and redeploy your project application. Although not that often, this is more possible to happen in your CI/CD workflows.
+
+### Failed to read Pulumi credentials file. Please re-run `pulumi login`.
+When deploying your project applications with the `yarn webiny deploy` command, if you get the following error:
+
+> error: problem logging in: failed to read Pulumi credentials file. Please re-run `pulumi login` to reset your credentials file: invalid character '\x00' looking for beginning of value
+
+This error may be because of the corrupted `credentials.json` file. `credentials.json` is located in the
+`your-webiny-project/.webiny/pulumi-cli/your-operating-system-specific-directory/pulumi/` directory.
+
+Mac / Linux:  
+`/Users/swapnilmmane/my-new-project/.webiny/pulumi-cli/darwin/pulumi/credentials.json`
+
+Windows:  
+`C:\my-new-project\.webiny\pulumi-cli\win32\pulumi\credentials.json`
+
+To fix the error, delete the `credentials.json` file and re-run the deploy command.
