docs: documenented how to set a default value to Headless CMS field

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -340,6 +340,41 @@ As we can see, like in the previous example, we're again utilizing the [`Context
 
 Content models and content model groups that were defined via plugins cannot be edited via Admin Area (via the Content Model Editor and Content Model Groups module). All of the changes need to be done within the application code.
 
+### How to set a default value of a field?
+You can set a default value to a field using the `defaultValue` property. Let's extend the above tutorial and
+set the default value of the `Product Name` attribute.
+
+```ts
+(...)
+fields: [
+  {
+    id: "productName",
+    fieldId: "productName",
+    type: "text",
+    label: "Product Name",
+    helpText: "A short product name",
+    renderer: { name: "text-input" },
+    settings: {
+        defaultValue: "You can set the default name of any product here"
+    }
+    validation: [
+      {
+        name: "required",
+        message: "Value is required."
+      }
+    ]
+  }
+(...)
+```
+
+In short, you will need to add settings -> defaultValue property to define a default value to a field.
+
+```ts
+settings: {
+  defaultValue: "You can set the default name of any product here"
+}
+```
+
 ### Are there any differences when it comes to security controls?
 
 When it comes to security, both ways of defining content models and content model groups have access to the same features and follow the same security-related built-in mechanisms. In other words, via the Security application, you can still decide which users have access to particular content models and content model groups that were defined via plugins, and which don't.
