docs: added the tutorial link

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -341,7 +341,7 @@ As we can see, like in the previous example, we're again utilizing the [`Context
 Content models and content model groups that were defined via plugins cannot be edited via Admin Area (via the Content Model Editor and Content Model Groups module). All of the changes need to be done within the application code.
 
 ### How to set a default value of a field?
-You can set a default value to a field using the `defaultValue` property. Let's extend the above tutorial and
+You can set a default value to a field using the `defaultValue` property. Let's extend the [tutorial above](#create-content-model-group-and-content-model-plugins) and
 set the default value of the `Product Name` attribute.
 
 ```ts
