fix: link the migration guide page in the changelog

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -40,7 +40,7 @@ When it comes to development, the new rendering engine also brought the followin
 
 For new Webiny projects, the new rendering engine is enabled by default. No extra steps needed!
 
-For existing projects, users have the option to migrate to the new rendering engine over time, once it's convenient
+For existing projects, users have the option to [migrate to the new rendering engine](/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration) over time, once it's convenient
 for them. Until then, their projects will still use the now _legacy_ rendering engine, which we plan to support until the end of June 2022. After that, the legacy rendering engine will be considered deprecated and will receive no further support from the Webiny team.
 
 When it comes to the migration guide, this is something we plan to publish over the next following days. Stay tuned for more information on this topic. 
