feat: intercepting the handler request updates

--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/intercepting-the-request.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/intercepting-the-request.mdx
@@ -95,3 +95,8 @@ Simply, with the `HandlerOnRequestPlugin` user can, in the initial stage of the 
 * log the request to some outside service 
 
 
+<Alert type="warning">
+
+Users must be careful on which path are they when executing the plugin code. Webiny has two built-in paths: `/cms` and `/graphql`.
+
+</Alert>
