fix: options example

--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/intercepting-the-request.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/intercepting-the-request.mdx
@@ -60,7 +60,7 @@ The most simple answer would be: to output their own headers in the `OPTIONS` re
 
 To prevent the Webiny default behavior on `OPTIONS` request, user would need to add a simple plugin which returns `false` as the result.
 
-Here is an example of sending a custom header `myCustomHeader`:
+Here is an example of sending a custom header `myCustomHeader`, and prevent the Webiny default behavior, on `OPTIONS` request:
 ```typescript
 import { createHandlerOnRequest } from "@webiny/handler";
 
