fix: rearrange the `credentials.json` section

--- a/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
@@ -224,17 +224,25 @@ Learn more about cloud infrastructure state files in the [Cloud Infrastructure S
 In case of the latter, in which an active deployment currently exists, then you'll just need to wait for the first one to finish, and redeploy your project application. Although not that often, this is more possible to happen in your CI/CD workflows.
 
 ### Failed to read Pulumi credentials file. Please re-run `pulumi login`.
-When deploying your project applications with the `yarn webiny deploy` command, if you get the following error:
+
+When deploying your project applications with the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command, on a couple of occasions, we've seen users receive the following error:
 
 > error: problem logging in: failed to read Pulumi credentials file. Please re-run `pulumi login` to reset your credentials file: invalid character '\x00' looking for beginning of value
 
-This error may be because of the corrupted `credentials.json` file. `credentials.json` is located in the
-`your-webiny-project/.webiny/pulumi-cli/your-operating-system-specific-directory/pulumi/` directory.
+After some investigation, we've seen this error can happen because of an error in the `credentials.json` file, which is an internal Pulumi file that holds [Pulumi service-related](https://www.pulumi.com/docs/intro/pulumi-service/) credentials.
 
-Mac / Linux:  
-`/Users/swapnilmmane/my-new-project/.webiny/pulumi-cli/darwin/pulumi/credentials.json`
+If you're not using Pulumi service, then, most likely, you can safely delete this file, and everything should start working again.
 
-Windows:  
-`C:\my-new-project\.webiny\pulumi-cli\win32\pulumi\credentials.json`
+Depending on your operating system, the file can be found in the following paths.
 
-To fix the error, delete the `credentials.json` file and re-run the deploy command.
+**Mac / Linux:**  
+
+```
+/Users/x/my-new-project/.webiny/pulumi-cli/darwin/pulumi/credentials.json
+```
+
+**Windows:**  
+
+```
+C:\my-new-project\.webiny\pulumi-cli\win32\pulumi\credentials.json
+```
