docs: used diff-ts to highlight the code differences

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code.mdx
@@ -344,7 +344,7 @@ Content models and content model groups that were defined via plugins cannot be 
 You can set a default value to a field using the `defaultValue` property. Let's extend the [tutorial above](#create-content-model-group-and-content-model-plugins) and
 set the default value of the `Product Name` attribute.
 
-```ts
+```diff-ts
 (...)
 fields: [
   {
@@ -354,9 +354,9 @@ fields: [
     label: "Product Name",
     helpText: "A short product name",
     renderer: { name: "text-input" },
-    settings: {
-        defaultValue: "You can set the default name of any product here"
-    }
++   settings: {
++       defaultValue: "You can set the default name of any product here"
++   }
     validation: [
       {
         name: "required",
@@ -367,13 +367,7 @@ fields: [
 (...)
 ```
 
-In short, you will need to add settings -> defaultValue property to define a default value to a field.
-
-```ts
-settings: {
-  defaultValue: "You can set the default name of any product here"
-}
-```
+In short, you will need to add `settings.defaultValue` property to define a default value to a field.
 
 ### Are there any differences when it comes to security controls?
 
