fix: routes and events

--- a/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
+++ b/src/docs/5.31.x/core-development-concepts/basics/routes-and-events.mdx
@@ -261,7 +261,7 @@ export const handler = createHandler({
         console.log(request.body);
 
         // and we can send some reply
-        reply
+        return reply
           .headers({
             "x-route-example": "yes"
           })
