fix: put hijack at the end of reply

--- a/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
+++ b/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
@@ -74,7 +74,12 @@ export const handler = createHandler({
               });
           });
           onOptions("/my-custom-path", async (_, reply) => {
-              return reply.hijack().send({});
+              return reply
+                  .headers({
+                      myCustomOptionHeader: "yes"
+                  })
+                  .send({})
+                  .hijack();
           });
       })
     ]
