feat: create `Creating a Cron Job` example

--- a/src/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -209,7 +209,7 @@ export default createApiApp({
 
 In this example, we introduce a new AWS Lambda function which is triggered once every minute.
 
-Note that the code assumes the AWS Lambda function's code is located in the `apps/api/myCronJob` folder. The full code can be found in our [Examples GitHub  repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security).
+Note that the code assumes the AWS Lambda function's code is located in the `apps/api/myCronJob` folder. For the full code, please check our [webiny-examples](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area-security) GitHub repository.
 
 ```ts apps/api/webiny.application.ts
 import * as path from "path";
