feat: create `Creating a Cron Job` example

--- a/src/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -219,7 +219,7 @@ import { createApiApp } from "@webiny/serverless-cms-aws";
 
 export default createApiApp({
     pulumiResourceNamePrefix: "wby-",
-    pulumi({ params, paths }) {
+    pulumi({ paths }) {
         const role = new aws.iam.Role("my-cron-job-fn-role", {
             description: "My cron job Lambda function role.",
             assumeRolePolicy: {
