wip: create 5.34 release notes

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -74,6 +74,6 @@ Note that the commands are run in series. Meaning, in the above example, the `we
 
 ### Extend GraphQL API Scaffold - Addressed Code Generation Issue ([#2984](https://github.com/webiny/webiny-js/pull/2984))
 
-Prior to this release, in some cases, the [Extend GraphQL API](/docs/{version}/core-development-concepts/scaffolding/extend-graphql-api), and, subsequently, the [Extend Admin Area](/docs/{version}/admin-area/new-app-tutorial/scaffolding) scaffolds, would end up generating faulty application code. More specifically, the generated GraphQL schemas would be missing some of the required GraphQL fields, for example `createdBy`. 
+Prior to this release, in some cases, the [Extend GraphQL API](/docs/{exact:5.34.x}/core-development-concepts/scaffolding/extend-graphql-api), and, subsequently, the [Extend Admin Area](/docs/{exact:5.34.x}/admin-area/new-app-tutorial/scaffolding) scaffolds, would end up generating faulty application code. More specifically, the generated GraphQL schemas would be missing some of the required GraphQL fields, for example `createdBy`. 
 
 This has now been addressed. The generated application code should now work without additional manual intervention from the user.  
