--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -10,17 +10,17 @@ description: See what's new in Webiny version 5.34.1.
 
 In case you missed it, with 5.34.0 release, we've released [Page Elements](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898), a brand new page rendering engine.
 
-But, as it usually goes, no release of a new feature goes without a hiccup or two. So, with this release, we've included a number of smaller fixes that were reported to us by first users that gave the new rendering engine a try. 
+But, as it usually goes, no release of a new feature goes without a hiccup or two. So, with this release, we've included a number of smaller fixes that were reported to us by first users that gave the new rendering engine a try.
 
-### Fixed an Issue With Page Rendering In the Admin Application  ([#2985](https://github.com/webiny/webiny-js/pull/2985))
+### Fixed an Issue With Page Rendering In the Admin Application ([#2985](https://github.com/webiny/webiny-js/pull/2985))
 
-In some cases, when entering the Admin application and navigating to the list of pages, the preview of pages would not work (usually, users would only see a blank screen). 
+In some cases, when entering the Admin application and navigating to the list of pages, the preview of pages would not work (usually, users would only see a blank screen).
 
 With this release, this has been addressed.
 
 ### Forms Are Now Rendered Correctly on Published Pages ([#2982](https://github.com/webiny/webiny-js/pull/2982))
 
-We've improved rendering of forms (created with the Form Builder application) on published pages. 
+We've improved rendering of forms (created with the Form Builder application) on published pages.
 
 From now on, no loading states nor network calls will be present before the form is rendered. Forms on published pages are now displayed immediately to the user, which ultimately improves the user experience.
 
@@ -40,16 +40,21 @@ With this release, we've introduced the new `@ps` GraphQL directive.
     }
 ```
 
-
-This new directive is useful when issuing GraphQL API queries within custom Page Builder page elements. 
+This new directive is useful when issuing GraphQL API queries within custom Page Builder page elements.
 
 When present in a GraphQL query and its `cache` parameter is set to `true`, during the page prerendering process, the prerendering service will be instructed to cache the received GraphQL API response in the actual page HTML. Ultimately, this ensures no network calls are issued when the page is actually served to real users, which provides faster page load time and overall better user experience.
+
+## Website
+
+### Use Webiny React Application Framework for the Website App ([#2983](https://github.com/webiny/webiny-js/pull/2983))
+
+[Webiny React application framework](/docs/{version}/admin-area/basics/framework) is something that's been powering our Admin app for the past year. It allowed us to register plugins as regular React components, by simply dropping them inside the `<Admin/>` element. With this release, we've finally refactored the internals of the Website app, to utilize this same application framework. With that, Website now works in the same manner as the Admin app, it allows developers to hook into the main Website components, add custom React Context providers, etc.
 
 ## Development
 
 ### Webiny CLI - Run Commands Against Multiple Project Applications ([#2974](https://github.com/webiny/webiny-js/pull/2974))
 
-Users can now execute Webiny CLI commands against multiple project applications in a single command execution. 
+Users can now execute Webiny CLI commands against multiple project applications in a single command execution.
 
 This is achieved by supplying names of different project applications, separated by comma (**,**) character. For example, the following command deploys **API** and **Admin** project applications into the **dev** environment:
 
@@ -70,10 +75,8 @@ Note that the commands are run in series. Meaning, in the above example, the `we
 - [`webiny output`](/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli#common-commands)
 - [`webiny pulumi`](/docs/{exact:5.34.x}/core-development-concepts/basics/webiny-cli#yarn-webiny-pulumi-folder---env-env----command)
 
-
-
 ### Extend GraphQL API Scaffold - Addressed Code Generation Issue ([#2984](https://github.com/webiny/webiny-js/pull/2984))
 
-Prior to this release, in some cases, the [Extend GraphQL API](/docs/{exact:5.34.x}/core-development-concepts/scaffolding/extend-graphql-api), and, subsequently, the [Extend Admin Area](/docs/{exact:5.34.x}/admin-area/new-app-tutorial/scaffolding) scaffolds, would end up generating faulty application code. More specifically, the generated GraphQL schemas would be missing some of the required GraphQL fields, for example `createdBy`. 
+Prior to this release, in some cases, the [Extend GraphQL API](/docs/{exact:5.34.x}/core-development-concepts/scaffolding/extend-graphql-api), and, subsequently, the [Extend Admin Area](/docs/{exact:5.34.x}/admin-area/new-app-tutorial/scaffolding) scaffolds, would end up generating faulty application code. More specifically, the generated GraphQL schemas would be missing some of the required GraphQL fields, for example `createdBy`.
 
-This has now been addressed. The generated application code should now work without additional manual intervention from the user.  
+This has now been addressed. The generated application code should now work without additional manual intervention from the user.
