--- a/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/project-deployment.mdx
@@ -222,3 +222,27 @@ Learn more about cloud infrastructure state files in the [Cloud Infrastructure S
 #### Another Deployment Currently in Progress
 
 In case of the latter, in which an active deployment currently exists, then you'll just need to wait for the first one to finish, and redeploy your project application. Although not that often, this is more possible to happen in your CI/CD workflows.
+
+### Failed to read Pulumi credentials file. Please re-run `pulumi login`.
+
+When deploying your project applications with the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command, on a couple of occasions, we've seen users receive the following error:
+
+> error: problem logging in: failed to read Pulumi credentials file. Please re-run `pulumi login` to reset your credentials file: invalid character '\x00' looking for beginning of value
+
+After some investigation, we've seen this error can happen because of an error in the `credentials.json` file, which is an internal Pulumi file that holds [Pulumi service-related](https://www.pulumi.com/docs/intro/pulumi-service/) credentials.
+
+If you're not using Pulumi service, then, most likely, you can safely delete this file, and everything should start working again.
+
+Depending on your operating system, the file can be found in the following paths.
+
+**Mac / Linux:**  
+
+```
+/Users/x/my-new-project/.webiny/pulumi-cli/darwin/pulumi/credentials.json
+```
+
+**Windows:**  
+
+```
+C:\my-new-project\.webiny\pulumi-cli\win32\pulumi\credentials.json
+```
