feat: headless cms custom sorting + changelog

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -80,3 +80,12 @@ Note that the commands are run in series. Meaning, in the above example, the `we
 Prior to this release, in some cases, the [Extend GraphQL API](/docs/{exact:5.34.x}/core-development-concepts/scaffolding/extend-graphql-api), and, subsequently, the [Extend Admin Area](/docs/{exact:5.34.x}/admin-area/new-app-tutorial/scaffolding) scaffolds, would end up generating faulty application code. More specifically, the generated GraphQL schemas would be missing some of the required GraphQL fields, for example `createdBy`.
 
 This has now been addressed. The generated application code should now work without additional manual intervention from the user.
+
+## Headless CMS
+
+### Customizable Fields Sorting ([#2986](https://github.com/webiny/webiny-js/pull/2986))
+
+Users can now add custom sort options into the Schema for user defined CMS Models.
+The support for custom sorting, we also added the plugins for both DynamoDB and DynamoDB + Elasticsearch systems.
+
+To find out more about custom sorting, please read this [article](/docs/headless-cms/extending/custom-sorting).
