feat: populate or not a referenced field value

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -89,3 +89,25 @@ Users can now add custom sort options into the Schema for user defined CMS Model
 The support for custom sorting, we also added the plugins for both DynamoDB and DynamoDB + Elasticsearch systems.
 
 To find out more about custom sorting, please read this [article](/docs/headless-cms/extending/custom-sorting).
+
+### Populate or Not Populate a Referenced Field Value ([#2987](https://github.com/webiny/webiny-js/pull/2987))
+
+Users can now choose if they want to populate referenced field value in the Read API.
+```graphql
+query {
+    listArticles {
+        data {
+            author(populate: false) {
+                id
+                entryId
+                modelId
+            }
+            category {// no need for (populate: true)
+                id
+                title
+            }
+        }
+    }
+}
+```
+The default behavior is to populate the field.
