feat: locale tenant change

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -111,3 +111,10 @@ query {
 }
 ```
 The default behavior is to populate the field.
+
+
+## I18N
+
+### Fix a tenantId Variable Being Kept After Tenant Change in a Single Request ([#2960](https://github.com/webiny/webiny-js/pull/2960)) 
+
+When user changed a tenant in the single request, via the code, a locale crud was still using the previous tenantId.
