typo: cms populate ref field

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -92,7 +92,7 @@ To find out more about custom sorting, please read this [article](/docs/headless
 
 ### Populate or Not Populate a Referenced Field Value ([#2987](https://github.com/webiny/webiny-js/pull/2987))
 
-Users can now choose if they want to populate referenced field value in the Read API.
+Users can now choose if they want to populate a referenced field value in the Read API.
 ```graphql
 query {
     listArticles {
@@ -102,7 +102,7 @@ query {
                 entryId
                 modelId
             }
-            category {// no need for (populate: true)
+            category {# no need for (populate: true)
                 id
                 title
             }
