--- a/src/docs/5.34.x/page-builder/extending/create-a-custom-page-element.mdx
+++ b/src/docs/5.34.x/page-builder/extending/create-a-custom-page-element.mdx
@@ -1,11 +1,11 @@
 ---
-title: Create a Custom page Element
-description: Tutorial on how to create a new element for Webiny Page Builder.
+title: Create a Custom Page Element
+description: Learn how to create a custom page element that can be rendered on pages created with the Webiny's Page Builder app. 
 ---
 
-import elementInSidebar from "./assets/create-a-page-element/_new/element-in-sidebar.png";
-import elementSettings from "./assets/create-a-page-element/_new/page-element-settings.png";
-import elementInEditor from "./assets/create-a-page-element/_new/element-in-editor.mp4";
+import elementInSidebar from "./assets/create-a-custom-page-element/element-in-sidebar.png";
+import elementSettings from "./assets/create-a-custom-page-element/page-element-settings.png";
+import elementInEditor from "./assets/create-a-custom-page-element/element-in-editor.mp4";
 
 import { Alert } from "@/components/Alert";
 
@@ -26,13 +26,11 @@ import { Alert } from "@/components/Alert";
 
 ## Introduction
 
-Out of the box, Webiny's Page Builder app provides a plethora of ready-made page elements you can use to create both simple and complex pages for your website. Furthermore, on top of the default set, users can also create their custom page elements in order satisfy their specific requirements, which is what this article demonstrates.
+Out of the box, Webiny's Page Builder app provides a plethora of ready-made page elements we can use to create both simple and complex pages for our website. Furthermore, on top of the default set, users can also create their custom page elements, which is what this article demonstrates.
 
-## Overview
+In this short article, we create a relatively simple page element that allows users to show a list of different [SpaceX](https://www.spacex.com/) rocket and dragon spacecrafts. Here's what the final result will look like:
 
-We'll create a relatively simple page element that allows users to show a list of different [SpaceX](https://www.spacex.com/) rocket and dragon spacecrafts. Here's what the final result will look like:
-
-![SpaceX Page Element](./assets/create-a-page-element/_new/preview.png)
+![SpaceX Page Element](./assets/create-a-custom-page-element/preview.png)
 
 The custom page element will be available from the **Media** page elements category:
 
@@ -42,7 +40,7 @@ The custom page element will be available from the **Media** page elements categ
   style={{ width: 450 }}
 />
 
-Also, upon dropping the element onto a page, users will also have the ability to adjust the following three settings:
+Also, upon dropping the element onto a page, users will have the ability to adjust the following three settings:
 
 1. type of spacecrafts to be displayed (rockets or dragons)
 2. number of spacecrafts to be displayed
@@ -66,17 +64,21 @@ To create a custom page element, we first need to create a [renderer React compo
 
 Via a couple of plugins, the next step is registering the renderer React component within our project's **Admin** and **Website** apps.
 
-On the **Admin** app side, we first register the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L498-L536) plugin, which enables us to introduce our custom page element into the Page Builder's page editor.
-
-After that, we register the [`PbEditorPageElementAdvancedSettingsPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L642-L647) plugin. This plugin defines all the related settings that are available to users upon dropping the page element onto a page.
-
-When it comes to the **Website** app, here we register the [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L375-L380) plugin. With it, we ensure our renderer React component is utilized upon serving a published page to an actual website visitor. Note we'll also need this plugin on the **Admin** app side because previewing pages is possible there too.
-
 <Alert type={"info"}>
 
-  The **Admin** and **Website** apps are located in the `apps/admin` and `apps/website` folders of an existing Webiny project.
+  In case you missed it, the **Admin** and **Website** apps are located in the `apps/admin` and `apps/website` folders of an existing Webiny project.
 
 </Alert>
+
+On the **Admin** app side, we first register the [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L498-L536) plugin, which enables us to introduce our custom page element into the Page Builder's page editor and enables users to drop the new element onto a page.
+
+After that, optionally, we register the [`PbEditorPageElementAdvancedSettingsPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L642-L647) plugin, which lets us define all the related settings that are available to users upon dropping the page element onto a page. Since the page element we're building does contain settings that the user can adjust, we will need this plugin as well.
+
+When it comes to the **Website** app, here we register the [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L375-L380) plugin. With it, we ensure our renderer React component is utilized upon serving a published page to an actual website visitor. Note we'll also need this plugin on the **Admin** app side because previewing pages is possible there too, outside the page editor.
+
+![Page Preview In the Admin App](./assets/create-a-custom-page-element/admin-page-preview.png)
+
+
 
 ### Code Organization
 
@@ -100,7 +102,7 @@ Ultimately, in the [`apps/theme/pageElements/spaceX`](https://github.com/webiny/
 
 ### Useful Webiny CLI Commands
 
-For easier development, both **Admin** and **Website** apps can be run and developed locally. This is done via the following two Webiny CLI commands:
+For easier development, both **Admin** and **Website** apps can be run and developed locally. This is done via the following two [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) commands:
 
 ```bash
 yarn webiny watch admin --env YOUR_ENV
@@ -209,13 +211,15 @@ export const SpaceX = createRenderer(() => {
 });
 ```
 
-Note that, for simplicity's sake, all the code is placed in a single file. Of course, it is possible to scatter it across multiple files, if preferred. Furthermore, in order to be able to issue GraphQL operations, we've introduced the [`graphql-request`](https://www.npmjs.com/package/graphql-request) library. The library can be installed via the following command:
+Note that, for simplicity's sake, all the code is placed in a single file. Of course, it is possible to organize it across multiple files, if preferred. 
+
+Furthermore, in order to be able to issue remote GraphQL queries, we introduce the [`graphql-request`](https://www.npmjs.com/package/graphql-request) package. The package can be installed via the following command, run from your project root:
 
 ```bash
 yarn workspace theme add graphql-request
 ```
 
-With this code in place, we're ready for the next step, and that is registering the renderer React component within our **Admin** and **Website** apps. We'll start with the **Website** app, as it's a simpler step to perform.
+With this code in place, we're ready for the next step, which is registering the renderer React component within our **Admin** and **Website** apps. We'll start with the **Website** app, as the plugin that we'll create here will also be needed within the **Admin** app.
 
 ### Website App
 
@@ -235,10 +239,10 @@ const plugin = {
 export default plugin;
 ```
 
-With this plugin in place, we'll need to register it within the **Website** app. This can be achieved via the [`apps/website/src/plugins/pageBuilder.ts`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/website/src/plugins/pageBuilder.ts#L62) file:
+With this plugin in place, we need to register it within the **Website** app. This can be achieved via the [`apps/website/src/plugins/pageBuilder.ts`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/website/src/plugins/pageBuilder.ts#L88) file:
 
 ```diff-ts apps/website/src/plugins/pageBuilder.ts
-// Some of the code was removed for brevity.
+// The rest of code was removed for brevity.
 + import spaceX from "theme/pageElements/spaceX/website";
 
 // ...
@@ -250,9 +254,13 @@ export default [
 ];
 ```
 
+With the plugin registered, we're ready to move on to the next step, and that is the **Admin** app.
+
 ### Admin App
 
-As previously mentioned, within the Admin app, we'll use two plugins: [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L498-L536) and [`PbEditorPageElementAdvancedSettingsPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L642-L647). For simplicity's sake, we'll again place all the code in a single file, this time in [`apps/theme/pageElements/spaceX/admin.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/theme/pageElements/spaceX/admin.tsx):
+As previously mentioned, within the **Admin** app, we need two plugins: [`PbEditorPageElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L498-L536) and [`PbEditorPageElementAdvancedSettingsPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L642-L647). 
+
+For simplicity's sake, we'll again place all the code in a single file, this time in [`apps/theme/pageElements/spaceX/admin.tsx`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/theme/pageElements/spaceX/admin.tsx):
 
 ```tsx apps/theme/pageElements/spaceX/admin.tsx
 import React from "react";
@@ -280,10 +288,13 @@ export default [
     elementType: "spaceX",
     render: SpaceX,
     toolbar: {
-      // We use `pb-editor-element-group-media` to put our plugin into the Media group.
+      // We use `pb-editor-element-group-media` to put our new 
+      // page element into the Media group in the left sidebar.
       title: "SpaceX",
       group: "pb-editor-element-group-media",
       preview() {
+        // We can return any JSX / React code here. To keep it
+        // simple, we are simply returning the element's name.
         return <>Space X Page Element</>;
       }
     },
@@ -321,6 +332,8 @@ export default [
     type: "pb-editor-page-element-advanced-settings",
     elementType: "spaceX",
     render({ Bind, submit }) {
+      // In order to construct the settings form, we're using the 
+      // `@webiny/form`, `@webiny/ui`, and `@webiny/validation` packages.
       return (
         <>
           <Grid>
@@ -367,9 +380,19 @@ export default [
 ];
 ```
 
-With these plugins in place, we'll need to register them within the **Admin** app. This can be achieved via the [`apps/admin/src/plugins/pageBuilder.ts`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/website/src/plugins/pageBuilder.ts#L62) file.
+Before we register these plugins, note that, in order to construct the settings form, we're using the [`@webiny/form`](https://github.com/webiny/webiny-js/tree/v5.34.0/packages/form), [`@webiny/ui`](https://github.com/webiny/webiny-js/tree/v5.34.0/packages/ui), and [`@webiny/validation`](https://github.com/webiny/webiny-js/tree/v5.34.0/packages/validation) packages. Since the [`@webiny/ui`](https://github.com/webiny/webiny-js/tree/v5.34.0/packages/ui) is not installed within the [`apps/theme`](https://github.com/webiny/webiny-examples/tree/master/page-builder/spacex-page-element/apps/theme) package by default, we need to install it. This can be done via the following command, run from your project root:
 
-```diff-ts apps/admin/src/plugins/pageBuilder.ts
+```bash
+yarn workspace theme add @webiny/ui
+```
+
+When it comes to plugin registration, in total, there are three plugins we need to register within the **Admin** app. The two shown above, plus the previously created [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L375-L380) plugin. The [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L375-L380) is required because, as mentioned, pages can also be previewed within the **Admin** app, outside the page editor.
+
+![Page Preview In the Admin App](./assets/create-a-custom-page-element/admin-page-preview.png)
+
+We register the two plugins via the [`apps/admin/src/plugins/pageBuilder/editorPlugins.ts`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/admin/src/plugins/pageBuilder/editorPlugins.ts#L88) file:
+
+```diff-ts apps/admin/src/plugins/pageBuilder/editorPlugins.ts
 // Some of the code was removed for brevity.
 + import spaceX from "theme/pageElements/spaceX/admin";
 
@@ -382,8 +405,37 @@ export default [
 ];
 ```
 
-## Conclusion
+The [`PbRenderElementPlugin`](https://github.com/webiny/webiny-js/blob/v5.34.0/packages/app-page-builder/src/types.ts#L375-L380) plugin can be registered via the [`apps/admin/src/plugins/pageBuilder/renderPlugins.ts`](https://github.com/webiny/webiny-examples/blob/master/page-builder/spacex-page-element/apps/admin/src/plugins/pageBuilder/renderPlugins.ts#L64) file:
 
-With the above steps successfully completed, we should be able to see our custom page element in Page Builder's page editor and be able to drop it onto a page. The page element should also be correctly rendered when previewing the page and also on the public website, once the page has been published.
+```diff-ts apps/admin/src/plugins/pageBuilder/renderPlugins.ts
+// The rest of code was removed for brevity.
++ import spaceX from "theme/pageElements/spaceX/website";
+
+// ...
+
+export default [
+    // ...
++   spaceX
+    // ...
+];
+```
+
+With all the plugins registered, we're now ready to give this a try locally in our browser. 
+
+## Testing
+
+With the above steps correctly completed, we should be able to see our custom page element in Page Builder's page editor and be able to drop it onto a page. The page element should also be correctly rendered when previewing the page, and also on the public website, once the page has been published.
 
 <Video src={elementInEditor} controls={true}/>
+
+## Conclusion
+
+Creating custom page elements is certainly an interesting option when users need more than what the default set of page elements provides.
+
+On the code level, this could be creating completely custom (renderer) React components, including needed external NPM libraries, or even issuing remote HTTP requests to external HTTP APIs in order to retrieve data from standalone external systems. 
+
+On the other hand, custom page elements also add additional flexibility by allowing content creators to tweak elements' settings and, ultimately, allowing them to achieve more with just a single page element.  
+
+
+
+
