fix: secret environment variable for mailer settings

--- a/src/docs/5.34.x/overview/features/mailer.mdx
+++ b/src/docs/5.34.x/overview/features/mailer.mdx
@@ -70,6 +70,13 @@ If you do not want to do that, use the configuration via environment variables.
 
 ![Mailer Settings](./assets/mailer-settings.png)
 
+<Alert type="warning">
+
+  Configuration via the UI is not available until you have the `WEBINY_MAILER_PASSWORD_SECRET` environment variable set.
+  Since we are storing the password in the database, we need to encrypt it. The `WEBINY_MAILER_PASSWORD_SECRET` is used as a secret in the `crypto-js` library's AES algorithm.
+
+</Alert>
+
 #### Advanced Configuration Via Code
 
 The advanced configuration is done by creating your own SMTP Transport with custom config. You can use our `createSmtpMailer` method, you just need to pass the custom configuration.
