fix: replace "project application" with "app"

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -33,7 +33,7 @@ With this release, we've introduced the new `@ps` GraphQL directive.
         formBuilder {
             getPublishedForm(revision: $revision, parent: $parent) {
                 data {
-                    // Fields not present from brevity.
+                    // Fields removed from brevity.
                 }
             }
         }
@@ -52,11 +52,11 @@ When present in a GraphQL query and its `cache` parameter is set to `true`, duri
 
 ## Development
 
-### Webiny CLI - Run Commands Against Multiple Project Applications ([#2974](https://github.com/webiny/webiny-js/pull/2974))
+### Webiny CLI - Run Commands Against Multiple Apps ([#2974](https://github.com/webiny/webiny-js/pull/2974))
 
-Users can now execute Webiny CLI commands against multiple project applications in a single command execution.
+Users can now execute Webiny CLI commands against multiple apps in a single command execution.
 
-This is achieved by supplying names of different project applications, separated by comma (**,**) character. For example, the following command deploys **API** and **Admin** project applications into the **dev** environment:
+This is achieved by supplying names of different apps, separated by comma (**,**) character. For example, the following command deploys **API** and **Admin** apps into the **dev** environment:
 
 ```bash
 yarn webiny deploy api,admin --env dev
