fix: title for field control

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -90,7 +90,7 @@ The support for custom sorting, we also added the plugins for both DynamoDB and 
 
 To find out more about custom sorting, please read this [article](/docs/headless-cms/extending/custom-sorting).
 
-### Populate or Not Populate a Referenced Field Value ([#2987](https://github.com/webiny/webiny-js/pull/2987))
+### Control Whether a Referenced Field Value Is Populated ([#2987](https://github.com/webiny/webiny-js/pull/2987))
 
 Users can now choose if they want to populate a referenced field value in the Read API.
 ```graphql
