feat: headless cms custom sorting + changelog (#548)

--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -80,3 +80,41 @@ Note that the commands are run in series. Meaning, in the above example, the `we
 Prior to this release, in some cases, the [Extend GraphQL API](/docs/{exact:5.34.x}/core-development-concepts/scaffolding/extend-graphql-api), and, subsequently, the [Extend Admin Area](/docs/{exact:5.34.x}/admin-area/new-app-tutorial/scaffolding) scaffolds, would end up generating faulty application code. More specifically, the generated GraphQL schemas would be missing some of the required GraphQL fields, for example `createdBy`.
 
 This has now been addressed. The generated application code should now work without additional manual intervention from the user.
+
+## Headless CMS
+
+### Customizable Fields Sorting ([#2986](https://github.com/webiny/webiny-js/pull/2986))
+
+Users can now add custom sort options into the Schema for user defined CMS Models.
+The support for custom sorting, we also added the plugins for both DynamoDB and DynamoDB + Elasticsearch systems.
+
+To find out more about custom sorting, please read this [article](/docs/headless-cms/extending/custom-sorting).
+
+### Control Whether a Referenced Field Value Is Populated ([#2987](https://github.com/webiny/webiny-js/pull/2987))
+
+Users can now choose if they want to populate a referenced field value in the Read API.
+```graphql
+query {
+    listArticles {
+        data {
+            author(populate: false) {
+                id
+                entryId
+                modelId
+            }
+            category {# no need for (populate: true)
+                id
+                title
+            }
+        }
+    }
+}
+```
+The default behavior is to populate the field.
+
+
+## I18N
+
+### Fix a tenantId Variable Being Kept After Tenant Change in a Single Request ([#2960](https://github.com/webiny/webiny-js/pull/2960)) 
+
+When user changed a tenant in the single request, via the code, a locale crud was still using the previous tenantId.
