Added another note around Cognito

--- a/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
+++ b/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
@@ -38,4 +38,8 @@ The short answer is no. Webiny is licensed under a dual-license model, where the
 
 **Why did you lock this feature under an enterprise offering?**
 
-As with many other businesses we too need to have a sustainable revenue model. Webiny in the open-source version is giving away over 90% of its capabilities and features completely for free. But to fund the future development of Webiny certain features are only available under the Enterprise of Business paid tiers. By purchasing the paid features you are supporting us as a business and as product for many years to come. 
+As with many other businesses we too need to have a sustainable revenue model. Webiny in the open-source version is giving away over 90% of its capabilities and features completely for free. But to fund the future development of Webiny certain features are only available under the Enterprise of Business paid tiers. By purchasing the paid features you are supporting us as a business and as a product for many years to come. 
+
+**Can I still use the open-source version of Webiny inside my enterprise organization if we use Cognito?**
+
+Yes. you can. The open-source version of Webiny ships with AWS Cognito as the IdP and uses the Cognito user pools to manage the user accounts and access. This setup is free for anyone to use.  
