--- a/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
+++ b/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
@@ -34,7 +34,7 @@ The OKTA and Auth0 ready-made integrations are only available under the Webiny E
 
 **Can I build my own integration if I'm not an enterprise customer?**
 
-The short answer is no. Webiny is licensed under a dual-license model, where the majority of the code base is under the MIT license, and the other smaller part is under our proprietary license. developing a custom IdP integration requires access to the code that's under the proprietary license. 
+The short answer is no. Webiny is licensed under a dual-license model, where the majority of the code base is under the MIT license, and the other smaller part is under our proprietary license. Developing a custom IdP integration requires access to the code that's under the proprietary license. 
 
 **Why did you lock this feature under an enterprise offering?**
 
