--- a/src/docs/shared/release-notes/5.34.1/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.1/changelog.mdx
@@ -50,6 +50,23 @@ When present in a GraphQL query and its `cache` parameter is set to `true`, duri
 
 [Webiny React application framework](/docs/{version}/admin-area/basics/framework) is something that's been powering our Admin app for the past year. It allowed us to register plugins as regular React components, by simply dropping them inside the `<Admin/>` element. With this release, we've finally refactored the internals of the Website app, to utilize this same application framework. With that, Website now works in the same manner as the Admin app, it allows developers to hook into the main Website components, add custom React Context providers, etc.
 
+However, the Website app has a different requirement comparing to the Admin app, and that is - **performance**. To optimize for rendering in the browser, and avoid visual glitches and unnecessary component remounts, we've also exposed the `providers` prop on the `<Website>` component. This way, we still control the internals, and your project is free of the boilerplate code, but you have the ability to add custom context providers, which can then feed your Page Builder element plugins, etc.
+
+```tsx apps/website/src/App.tsx
+/* Create a custom Higher Order Component */
+const MyProvider = Component => {
+  return function MyProvider({ children }) {
+    /* Add your logic here! */
+    return <Component>{children}</Component>;
+  };
+};
+
+export const App: React.FC = () => {
+  /* Pass your HOC to the Website app! */
+  return <Website providers={[MyProvider]} />;
+};
+```
+
 ## Development
 
 ### Webiny CLI - Run Commands Against Multiple Apps ([#2974](https://github.com/webiny/webiny-js/pull/2974))
@@ -93,28 +110,30 @@ To find out more about custom sorting, please read this [article](/docs/headless
 ### Control Whether a Referenced Field Value Is Populated ([#2987](https://github.com/webiny/webiny-js/pull/2987))
 
 Users can now choose if they want to populate a referenced field value in the Read API.
+
 ```graphql
 query {
-    listArticles {
-        data {
-            author(populate: false) {
-                id
-                entryId
-                modelId
-            }
-            category {# no need for (populate: true)
-                id
-                title
-            }
-        }
+  listArticles {
+    data {
+      author(populate: false) {
+        id
+        entryId
+        modelId
+      }
+      category {
+        # no need for (populate: true)
+        id
+        title
+      }
     }
+  }
 }
 ```
-The default behavior is to populate the field.
 
+The default behavior is to populate the field.
 
 ## I18N
 
-### Fix a tenantId Variable Being Kept After Tenant Change in a Single Request ([#2960](https://github.com/webiny/webiny-js/pull/2960)) 
+### Fix a tenantId Variable Being Kept After Tenant Change in a Single Request ([#2960](https://github.com/webiny/webiny-js/pull/2960))
 
 When user changed a tenant in the single request, via the code, a locale crud was still using the previous tenantId.
