fix: use `{version}` in links

--- a/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
+++ b/src/docs/5.34.x/overview/features/sso-and-custom-authenticators.mdx
@@ -24,7 +24,7 @@ In certain cases, an enterprise organization might already have an internal IdP 
 
 Customers using Webiny Enterprise edition can integrate those 3rd party IdPs with Webiny and use it to control, from a central place, which of their employees are allowed to access their Webiny instance. 
 
-Webiny provides integrations with the most popular IdPs such as [OKTA](/docs/enterprise/okta-integration) and [Auth0](/docs/enterprise/auth0-integration) out of the box. For other IdPs and SSO Webiny's core engineering team can work directly with the customer and make those integrations, as part of their Webiny Enterprise contract. 
+Webiny provides integrations with the most popular IdPs such as [OKTA](/docs/{version}/enterprise/okta-integration) and [Auth0](/docs/{version}/enterprise/auth0-integration) out of the box. For other IdPs and SSO Webiny's core engineering team can work directly with the customer and make those integrations, as part of their Webiny Enterprise contract. 
 
 ## FAQ
 
